--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,Sistema de vacunacion, initial-scale=1.0">
     <title>sistema de vacunacion</title>
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="Estilos/estilos.css">
     <link rel="shortcut icon" href="toro.jpg" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -36,7 +36,7 @@
         <div class="wave" style="height: 150px; overflow: hidden;"><svg viewBox="0 0 500 150" preserveAspectRatio="none"
                 style="height: 100%; width: 100%;">
                 <path d="M0.00,49.98 C149.99,150.00 349.20,-49.98 500.00,49.98 L500.00,150.00 L0.00,150.00 Z"
-                    style="stroke: none; fill: #2c3834;"></path>
+                    style="stroke: none; fill: #2c3834; "></path>
             </svg></div>
 
     </header>
