--- a/login.html
+++ b/login.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,Sistema de vacunacion, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="estilos.css">
-    <link rel="stylesheet" href="estilos4.css">
+    <link rel="stylesheet" href="Estilos/estilos.css">
+    <link rel="stylesheet" href="Estilos/estilos4.css">
     <link rel="shortcut icon" href="toro.jpg" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
