--- a/animales.html
+++ b/animales.html
@@ -34,7 +34,7 @@
         <div class="wave" style="height: 150px; overflow: hidden;"><svg viewBox="0 0 500 150" preserveAspectRatio="none"
                 style="height: 100%; width: 100%;">
                 <path d="M0.00,49.98 C149.99,150.00 349.20,-49.98 500.00,49.98 L500.00,150.00 L0.00,150.00 Z"
-                    style="stroke: none; fill: #e4e4f5;"></path>
+                    style="stroke: none; fill: #2c3834;"></path>
             </svg></div>
 
     </header>
@@ -42,6 +42,7 @@
     <main>
         <section class="contenido">
             <h2>Animales que acceden a los beneficios</h2>
+            <hr>
             <h3>Bobinos</h3>
             <div class="animal">
 
@@ -61,7 +62,9 @@
                     <li>Vacuna clostridial</li>
                     <li>Vacuna clostidrial y antirabia</li>
                 </div>
+                
             </div>
+            <hr>
             <h3>Equinos</h3>
             <div class="animal">
 
@@ -79,6 +82,7 @@
                     <li>Antipirético</li>
                 </div>
             </div>
+            <hr>
             <h3>Aves</h3>
             <div class="animal">
 
@@ -97,6 +101,7 @@
                     <li>Coriza</li>
                 </div>
             </div>
+            <hr>
             <h3>Bufalos</h3>
             <div class="animal">
 
@@ -115,6 +120,7 @@
                     <li>Neosporosis</li>
                 </div>
             </div>
+            <hr>
             <h3>Caninos</h3>
             <div class="animal">
 
@@ -133,6 +139,7 @@
                     <li>Traqueobronquitis</li>
                 </div>
             </div>
+            <hr>
             <h3>Felinos</h3>
             <div class="animal">
 
@@ -151,6 +158,7 @@
                     <li>Panleucopenia</li>
                 </div>
             </div>
+            <hr>
 
 
         </section>
